--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/en.lproj/Localizable.strings
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/Resources/en.lproj/Localizable.strings
@@ -1,2 +1,4 @@
 /* Localized versions of Info.plist keys */
 
+"input_email" = "Please input email";
+"input_phone" = "Please input your phone number";
